--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  amplify_flutter: '<1.0.0'
+  amplify_auth_cognito: '<1.0.0'
 
 
   # The following adds the Cupertino Icons font to your application.
