fixed issues with retrieving token

--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,5 +1,5 @@
 {
-    "projectName": "MotivateMeMobileApp",
+    "projectName": "MotivateMeMobileAppl",
     "version": "3.0",
     "frontend": "flutter",
     "flutter": {
