--- a/amplify/backend/auth/motivatememobileapplcb845a27/motivatememobileapplcb845a27-cloudformation-template.yml
+++ b/amplify/backend/auth/motivatememobileapplcb845a27/motivatememobileapplcb845a27-cloudformation-template.yml
@@ -11,6 +11,12 @@ Parameters:
   
 
     
+  identityPoolName:
+    Type: String
+                
+  allowUnauthenticatedIdentities:
+    Type: String
+            
   resourceNameTruncated:
     Type: String
               
@@ -40,10 +46,10 @@ Parameters:
                 
   defaultPasswordPolicy:
     Type: String
-            
+                
   passwordPolicyMinLength:
-    Type: String
-                      
+    Type: Number
+                  
   passwordPolicyCharacters:
     Type: CommaDelimitedList
               
@@ -68,30 +74,24 @@ Parameters:
   userpoolClientSetAttributes:
     Type: String
             
-  useDefault:
-    Type: String
-              
-  authSelections:
+  sharedId:
     Type: String
               
   resourceName:
     Type: String
-                
-  userPoolGroups:
+              
+  authSelections:
+    Type: String
+                                      
+  useDefault:
     Type: String
               
-  adminQueries:
-    Type: String
-            
   triggers:
     Type: String
-                
-  hostedUI:
-    Type: String
-                    
+                      
   userPoolGroupList:
     Type: CommaDelimitedList
-                                                
+                        
   parentStack:
     Type: String
                 
@@ -112,7 +112,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'motiva0135cb94_sns-role', !Join ['',[ 'sns', 'undefined', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'motivacb845a27_sns-role', !Join ['',[ 'sns', 'cb845a27', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument: 
         Version: "2012-10-17"
         Statement: 
@@ -124,10 +124,10 @@ Resources:
               - "sts:AssumeRole"
             Condition: 
               StringEquals:
-                sts:ExternalId: motiva0135cb94_role_external_id
+                sts:ExternalId: motivacb845a27_role_external_id
       Policies: 
         - 
-          PolicyName: motiva0135cb94-sns-policy
+          PolicyName: motivacb845a27-sns-policy
           PolicyDocument: 
             Version: "2012-10-17"
             Statement: 
@@ -145,24 +145,19 @@ Resources:
     Properties:
       UserPoolName: !If [ShouldNotCreateEnvResources, !Ref userPoolName, !Join ['',[!Ref userPoolName, '-', !Ref env]]]
       
-      Schema: 
-        
-        -
-          Name: name
-          Required: true
-          Mutable: true
-        
-      
       
       
       AutoVerifiedAttributes: !Ref autoVerifiedAttributes
       
+      
+      EmailVerificationMessage: !Ref emailVerificationMessage
+      EmailVerificationSubject: !Ref emailVerificationSubject
             
       Policies:
         PasswordPolicy:
           MinimumLength: !Ref passwordPolicyMinLength
           RequireLowercase: false
-          RequireNumbers: true
+          RequireNumbers: false
           RequireSymbols: false
           RequireUppercase: false
           
@@ -170,7 +165,7 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration: 
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: motiva0135cb94_role_external_id
+        ExternalId: motivacb845a27_role_external_id
     
   
     
@@ -190,7 +185,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: motiva0135cb94_app_clientWeb
+      ClientName: motivacb845a27_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -200,7 +195,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: motiva0135cb94_app_client
+      ClientName: motivacb845a27_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -211,7 +206,7 @@ Resources:
   # Created to execute Lambda which gets userpool app client config values
     Type: 'AWS::IAM::Role'
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', 'undefined', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', 'cb845a27', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -265,7 +260,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: motiva0135cb94_userpoolclient_lambda_iam_policy
+      PolicyName: motivacb845a27_userpoolclient_lambda_iam_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -282,7 +277,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: motiva0135cb94_userpoolclient_lambda_log_policy
+      PolicyName: motivacb845a27_userpoolclient_lambda_log_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -315,8 +310,50 @@ Resources:
 
   
     
+  # BEGIN IDENTITY POOL RESOURCES
+  
+ 
+  IdentityPool:
+  # Always created
+    Type: AWS::Cognito::IdentityPool
+    Properties: 
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'motivatememobileapplcb845a27_identitypool_cb845a27', !Join ['',['motivatememobileapplcb845a27_identitypool_cb845a27', '__', !Ref env]]]
+      
+      CognitoIdentityProviders:
+        - ClientId:  !Ref UserPoolClient
+          ProviderName: !Sub
+            - cognito-idp.${region}.amazonaws.com/${client}
+            - { region: !Ref "AWS::Region",  client: !Ref UserPool}
+        - ClientId:  !Ref UserPoolClientWeb
+          ProviderName: !Sub
+            - cognito-idp.${region}.amazonaws.com/${client}
+            - { region: !Ref "AWS::Region",  client: !Ref UserPool}
+            
+      AllowUnauthenticatedIdentities: !Ref allowUnauthenticatedIdentities
+       
+       
+    DependsOn: UserPoolClientInputs 
+    
+  
+  IdentityPoolRoleMap:
+  # Created to map Auth and Unauth roles to the identity pool
+  # Depends on Identity Pool for ID ref
+    Type: AWS::Cognito::IdentityPoolRoleAttachment
+    Properties: 
+      IdentityPoolId: !Ref IdentityPool
+      Roles:
+          unauthenticated: !Ref unauthRoleArn
+          authenticated: !Ref authRoleArn
+    DependsOn: IdentityPool
+  
 
 Outputs :
+  
+  IdentityPoolId:
+    Value: !Ref 'IdentityPool'
+    Description:  Id for the identity pool
+  IdentityPoolName:
+    Value: !GetAtt IdentityPool.Name 
   
   
   
