--- a/amplify/backend/auth/motivatememobileapplbdbd606c/motivatememobileapplbdbd606c-cloudformation-template.yml
+++ b/amplify/backend/auth/motivatememobileapplbdbd606c/motivatememobileapplbdbd606c-cloudformation-template.yml
@@ -112,7 +112,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'motivacb845a27_sns-role', !Join ['',[ 'sns', 'cb845a27', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'motivabdbd606c_sns-role', !Join ['',[ 'sns', 'bdbd606c', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument: 
         Version: "2012-10-17"
         Statement: 
@@ -124,10 +124,10 @@ Resources:
               - "sts:AssumeRole"
             Condition: 
               StringEquals:
-                sts:ExternalId: motivacb845a27_role_external_id
+                sts:ExternalId: motivabdbd606c_role_external_id
       Policies: 
         - 
-          PolicyName: motivacb845a27-sns-policy
+          PolicyName: motivabdbd606c-sns-policy
           PolicyDocument: 
             Version: "2012-10-17"
             Statement: 
@@ -144,6 +144,14 @@ Resources:
     UpdateReplacePolicy: Retain
     Properties:
       UserPoolName: !If [ShouldNotCreateEnvResources, !Ref userPoolName, !Join ['',[!Ref userPoolName, '-', !Ref env]]]
+      
+      Schema: 
+        
+        -
+          Name: email
+          Required: true
+          Mutable: true
+        
       
       
       
@@ -165,7 +173,7 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration: 
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: motivacb845a27_role_external_id
+        ExternalId: motivabdbd606c_role_external_id
     
   
     
@@ -185,7 +193,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: motivacb845a27_app_clientWeb
+      ClientName: motivabdbd606c_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -195,7 +203,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: motivacb845a27_app_client
+      ClientName: motivabdbd606c_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -206,7 +214,7 @@ Resources:
   # Created to execute Lambda which gets userpool app client config values
     Type: 'AWS::IAM::Role'
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', 'cb845a27', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', 'bdbd606c', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -260,7 +268,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: motivacb845a27_userpoolclient_lambda_iam_policy
+      PolicyName: motivabdbd606c_userpoolclient_lambda_iam_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -277,7 +285,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: motivacb845a27_userpoolclient_lambda_log_policy
+      PolicyName: motivabdbd606c_userpoolclient_lambda_log_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -317,7 +325,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties: 
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'motivatememobileapplcb845a27_identitypool_cb845a27', !Join ['',['motivatememobileapplcb845a27_identitypool_cb845a27', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'motivatememobileapplbdbd606c_identitypool_bdbd606c', !Join ['',['motivatememobileapplbdbd606c_identitypool_bdbd606c', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
