--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,10 +21,12 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  validators: ^2.0.0
   flutter:
     sdk: flutter
   amplify_flutter: '<1.0.0'
   amplify_auth_cognito: '<1.0.0'
+  
 
 
   # The following adds the Cupertino Icons font to your application.
