inspire me function added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
     sdk: flutter
   amplify_flutter: '<1.0.0'
   amplify_auth_cognito: '<1.0.0'
+  amplify_storage_s3: '<1.0.0'
   
 
 
