--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,14 @@ dependencies:
   validators: ^2.0.0
   flutter:
     sdk: flutter
+  day_picker: 1.0.1
+  datetime_picker_formfield: ^2.0.0
   amplify_flutter: '<1.0.0'
   amplify_auth_cognito: '<1.0.0'
   amplify_storage_s3: '<1.0.0'
   sqflite:
   path:
+  intl: ^0.17.0
   
 
 
