--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,14 +21,16 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  validators: ^2.0.0
   flutter:
     sdk: flutter
+  camera:
+  path_provider:
   day_picker: 1.0.1
   datetime_picker_formfield: ^2.0.0
   amplify_flutter: '<1.0.0'
   amplify_auth_cognito: '<1.0.0'
   amplify_storage_s3: '<1.0.0'
+  table_calendar: ^3.0.0
   sqflite:
   path:
   intl: '^0.17.0'
