--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   camera:
   path_provider:
   day_picker: 1.0.1
+  weekday_selector: ^1.0.0
   datetime_picker_formfield: ^2.0.0
   amplify_flutter: '<1.0.0'
   amplify_auth_cognito: '<1.0.0'
