--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,8 @@ environment:
 
 dependencies:
   flutter:     
-    sdk: flutter 
+    sdk: flutter
+  flutter_launcher_icons: "^0.8.0"
   camera:
   path_provider:
   day_picker: 1.0.1
@@ -35,7 +36,10 @@ dependencies:
   sqflite:
   path:
   intl: '^0.17.0'
-  
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "icon/MotivateMe.png" 
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -55,6 +59,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+   - icon/MotivateMe.png
   fonts:
     - family: Montserrat
       fonts:
